# EvacuationC

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  CMakeLists.txt  Cargo.toml  README.md  bsconfig.json  build.rs  config.html  index.html  package-lock.json  package.json  scenario.json  tsconfig.json  vite.config.js  vite.config.ts
res/: building_test.json  one_zone_one_exit.json  three_zone_three_transit.json  two_levels.json
src/: bim_configure.c  bim_configure.h  bim_evac.c  bim_evac.h  bim_json_object.c  bim_json_object.h  bim_output.c  bim_output.h  bim_polygon_tools.c  bim_tools.c  bim_tools.h  main.c  main.rs  run.c  run.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  run_bindings.rs
src-ui/: App.tsx  config.js  index.bs.js  index.css  index.res  main.bs.js  main.js  main.res  main.tsx
src-ui/config/: config.bs.js  config.res  index.css  index.html  main.ts
src/bim_cli/: Cargo.toml
src/bim_cli/src/: bim_cli.h  lib.rs
src/bim_configure/: Cargo.toml
src/bim_configure/src/: bim_configure_rust.h  lib.rs
src/bim_json_object/: Cargo.toml
src/bim_json_object/src/: bim_json_object.h  bim_json_object_rust.h  lib.rs
src/bim_tools/: Cargo.toml
src/bim_tools/src/: lib.rs
src/cli/src/: lib.rs
src/configuration/: Cargo.toml
src/configuration/src/: lib.rs
src/graph/: Cargo.toml
src/graph/src/: lib.rs
src/json_object/: Cargo.toml
src/json_object/src/: lib.rs
src/polygon_tools/: Cargo.toml
src/polygon_tools/src/: lib.rs
src/tools/src/: lib.rs
